--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
-<!-- BEGIN -->
+<!--
 <!DOCTYPE html>
 <html>
 
@@ -106,7 +106,28 @@
         </section>
       </section>
     </div>
-
   </body>
 </html>
-<!-- END -->
+-->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="">
+  <title>Document</title>
+</head>
+<body>
+  <header class="page-header">
+    <h1 id="page-title" class="title">Профессиональная техника для обжарщиков</h1>
+    <nav>
+      <ul id="main-nav" class="nav">
+        <li><a href="/"></a>Галвная</li>
+        <li><a href="/coffees">Ростеры</a></li>
+        <li><a href="/brewers">Кофеварки</a></li>
+        <li><a href="/special" class="featured">Акции!</a></li>
+      </ul>
+    </nav>
+  </header>
+</body>
+</html>
