--- a/main.html
+++ b/main.html
@@ -1,120 +1,8 @@
-<!--
-<!DOCTYPE html>
-<html>
-
-  <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Резюме Алексей Примадонин</title>
-  </head>
-
-  <body>
-    <div class="container">
-      <section class="card">
-        <header class="card-header">
-          <h1>Remote Working</h1>
-          <i class="btn-back material-icons md-36">
-            navigate_before
-          </i>
-          <i class="btn-more material-icons md-36">
-            more_horiz
-          </i>
-          <button class="btn-add">
-            <i class="material-icons md-24">
-              add
-            </i>
-          </button>
-        </header>
-        <section class="card-content">
-          <h3>Today</h3>
-          <ul class="task-list">
-            <li>
-              <label>
-                <input type="checkbox">
-              </label>
-              <i class="material-icons md-30">
-                phone_android
-              </i>
-              <div class="task-content">
-                <h4>Design onboarding screen</h4>
-                <p>Discuss with the dev first</p>
-              </div>
-              <i class="material-icons md-30 active">
-                star_rate
-               </i>
-            </li>
-            <li>
-              <label>
-                <input type="checkbox">
-              </label>
-              <i class="material-icons md-30">
-                edit
-              </i>
-              <div class="task-content">
-                <h4>Create a new icon set</h4>
-              </div>
-              <i class="material-icons md-30">
-                star_rate
-               </i>
-            </li>
-          </ul>
-          <h3>Tomorrow</h3>
-          <ul class="task-list">
-            <li>
-              <label>
-                <input type="checkbox">
-              </label>
-              <i class="material-icons md-30">
-                laptop
-              </i>
-              <div class="task-content">
-                <h4>Code a new porftolio web</h4>
-              </div>
-              <i class="material-icons md-30">
-                star_rate
-               </i>
-            </li>
-            <li>
-              <label>
-                <input type="checkbox">
-              </label>
-              <i class="material-icons md-30">
-                email
-              </i>
-              <div class="task-content">
-                <h4>Send proposal email</h4>
-              </div>
-              <i class="material-icons md-30">
-                star_rate
-               </i>
-            </li>
-            <li class="removed">
-              <label>
-                <input type="checkbox">
-              </label>
-              <i class="material-icons md-30">
-                email
-              </i>
-              <div class="task-content">
-                <h4>Design onboarding screen</h4>
-              </div>
-              <i class="material-icons md-30">
-                delete 
-              </i>
-            </li>
-          </ul>
-        </section>
-      </section>
-    </div>
-  </body>
-</html>
--->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="./css/styles.css">
   <title>Document</title>
 </head>
 <body>
@@ -122,7 +10,7 @@
     <h1 id="page-title" class="title">Профессиональная техника для обжарщиков</h1>
     <nav>
       <ul id="main-nav" class="nav">
-        <li><a href="/"></a>Галвная</li>
+        <li><a href="/">Галвная</a></li>
         <li><a href="/coffees">Ростеры</a></li>
         <li><a href="/brewers">Кофеварки</a></li>
         <li><a href="/special" class="featured">Акции!</a></li>
