--- a/main.html
+++ b/main.html
@@ -17,5 +17,11 @@
       </ul>
     </nav>
   </header>
+  <main>
+    <p>
+      Обязательно проверьте раздел с 
+      <a href="/specials" class="featured">нашими акциями!</a>.
+    </p>
+  </main>
 </body>
 </html>
