Step 1.16 modified styles.css

--- a/main.html
+++ b/main.html
@@ -23,5 +23,9 @@
       <a href="/specials" class="featured">нашими акциями!</a>.
     </p>
   </main>
+  <footer class="footer"> 
+    &copy; 2019 Профессиональная техника для обжарщиков &mdash; 
+      <a href="/terms-of-use">Условия Эксплуатации</a>
+  </footer>
 </body>
 </html>
